add feature - image slider HTML

--- a/index.html
+++ b/index.html
@@ -17,7 +17,15 @@
             </div>
         </div>
     </div>
-
+    <div class="card card2">
+        <div class="slider">
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <img src="./images/pexels-kitsun-yuen-7614550.jpg" alt="" class="picture">
+            <img src="./images/pexels-pixabay-237272.jpg" alt="" class="picture">
+            <img src="./images/pexels-quang-nguyen-vinh-2649394.jpg" alt="" class="picture">
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>            
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
