Implemented js recursive functions as practice

--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
             <span class="dot" onclick="currentSlide(3)"></span>
           </div>
     </div>
+    <div class="card card3">    
+        <div class="cardTitle">Recursion Practice (JS)</div>
+        <p>Functions:</p>
+        <p> - sumRange(n)</p>
+
+    </div>
 
     <script src="script.js"></script>
 </body>
