Add feature - mergesort function for practice
A mergesort function was added for the sake of practicing the
algorithm and application

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Sandbox</title>
+    <title>Playground</title>
 </head>
 <body>
     <div class="card card1">
@@ -37,6 +37,11 @@
         <div class="cardTitle">Recursion Practice (JS)</div>
         <p>Functions:</p>
         <p> - sumRange(n)</p>
+        <p> - power()</p>
+        <p> - factorial()</p>
+        <p> - productOfArray()</p>
+        <p> - fibonacci()</p>
+        <p> - mergeSort()</p>
 
     </div>
 
